--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-    <meta HTTP-EQUIV="REFRESH" content="0; url=info/general.html">
+    <meta HTTP-EQUIV="REFRESH" content="0; url=html/index.html">
 </head>
 </html>
