--- a/html/index.html
+++ b/html/index.html
@@ -69,19 +69,19 @@
   
     <li><a href="./Copernicium.html">Copernicium</a>
   
+    <li><a href="./Copernicium/FileObj.html">Copernicium::FileObj</a>
+  
     <li><a href="./Copernicium/PushPull.html">Copernicium::PushPull</a>
+  
+    <li><a href="./Copernicium/Repos.html">Copernicium::Repos</a>
   
     <li><a href="./Copernicium/RevLog.html">Copernicium::RevLog</a>
   
+    <li><a href="./Copernicium/Snapshot.html">Copernicium::Snapshot</a>
+  
     <li><a href="./Copernicium/UICommandCommunicator.html">Copernicium::UICommandCommunicator</a>
   
-    <li><a href="./Repos.html">Repos</a>
-  
-    <li><a href="./Repos/Repos.html">Repos::Repos</a>
-  
-    <li><a href="./Workspace.html">Workspace</a>
-  
-    <li><a href="./Workspace/Workspace.html">Workspace::Workspace</a>
+    <li><a href="./Copernicium/Workspace.html">Copernicium::Workspace</a>
   
   </ul>
 </div>
