updating docs off of 0.0.1

--- a/html/README_md.html
+++ b/html/README_md.html
@@ -56,9 +56,9 @@
 
   <ul class="link-list" role="directory">
     <li><a href="#label-copernicium"><a href="https://en.wikipedia.org/wiki/Copernicium">copernicium</a></a>
-    <li><a href="#label-Setup">Setup</a>
-    <li><a href="#label-Testing">Testing</a>
-    <li><a href="#label-Relevant+links-3A">Relevant links:</a>
+    <li><a href="#label-installation">installation</a>
+    <li><a href="#label-development">development</a>
+    <li><a href="#label-relevant+links-3A">relevant links:</a>
   </ul>
 </div>
 
@@ -81,25 +81,32 @@
 
 <h1 id="label-copernicium"><a href="https://en.wikipedia.org/wiki/Copernicium">copernicium</a><span><a href="#label-copernicium">&para;</a> <a href="#top">&uarr;</a></span></h1>
 
-<p><a href="https://travis-ci.org/jeremywrnr/copernicium"><img
-src="https://travis-ci.org/jeremywrnr/copernicium.svg"></a></p>
+<p><a href="https://badge.fury.io/rb/copernicium"><img
+src="https://badge.fury.io/rb/copernicium.svg"></a> <a
+href="https://travis-ci.org/jeremywrnr/copernicium"><img
+src="https://travis-ci.org/jeremywrnr/copernicium.svg"></a> <a
+href="http://jeremywrnr.com/mit-license"><img
+src="https://img.shields.io/npm/l/alt.svg?style=flat"></a></p>
 
 <p>Repository for Team Copernicium&#39;s DVCS.</p>
 
-<h3 id="label-Setup">Setup<span><a href="#label-Setup">&para;</a> <a href="#top">&uarr;</a></span></h3>
+<h3 id="label-installation">installation<span><a href="#label-installation">&para;</a> <a href="#top">&uarr;</a></span></h3>
+
+<pre>$ [sudo] gem install copernicium</pre>
+
+<h3 id="label-development">development<span><a href="#label-development">&para;</a> <a href="#top">&uarr;</a></span></h3>
 
 <p>To install all runtime and testing dependencies, run:</p>
 
-<pre>$ rake setup</pre>
-
-<h3 id="label-Testing">Testing<span><a href="#label-Testing">&para;</a> <a href="#top">&uarr;</a></span></h3>
+<pre>$ [sudo] gem install rake
+$ rake setup</pre>
 
 <p>To run the entire test suite, run <code>rake</code>. Else run a specific
 test suite, eg:</p>
 
 <pre>$ rake &#39;test[pushpull]&#39;</pre>
 
-<h3 id="label-Relevant+links-3A">Relevant links:<span><a href="#label-Relevant+links-3A">&para;</a> <a href="#top">&uarr;</a></span></h3>
+<h3 id="label-relevant+links-3A">relevant links:<span><a href="#label-relevant+links-3A">&para;</a> <a href="#top">&uarr;</a></span></h3>
 <ul><li>
 <p><a
 href="https://docs.google.com/document/d/1r3-NquhyRLbCncqTOQPwsznSZ-en6G6xzLbWIAmxhys/">spec.
