--- a/html/Copernicium/FileObj.html
+++ b/html/Copernicium/FileObj.html
@@ -58,7 +58,7 @@
   <h3>Parent</h3>
 
   
-  <p class="link">Object
+  <p class="link"><a href="../Object.html">Object</a>
   
 </div>
 
@@ -161,7 +161,7 @@
 
           
           <div class="method-source-code" id="new-source">
-            <pre><span class="ruby-comment"># File lib/workspace.rb, line 12</span>
+            <pre><span class="ruby-comment"># File lib/workspace.rb, line 7</span>
 <span class="ruby-keyword">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">path</span>, <span class="ruby-identifier">ids</span>)
   <span class="ruby-ivar">@path</span> = <span class="ruby-identifier">path</span>
   <span class="ruby-ivar">@history_hash_ids</span> = <span class="ruby-identifier">ids</span>
@@ -203,7 +203,7 @@
 
           
           <div class="method-source-code" id="3D-3D-source">
-            <pre><span class="ruby-comment"># File lib/workspace.rb, line 17</span>
+            <pre><span class="ruby-comment"># File lib/workspace.rb, line 12</span>
 <span class="ruby-keyword">def</span> <span class="ruby-operator">==</span>(<span class="ruby-identifier">rhs</span>)
   <span class="ruby-keyword">if</span> <span class="ruby-identifier">rhs</span>.<span class="ruby-identifier">is_a?</span> <span class="ruby-constant">String</span>
     <span class="ruby-ivar">@path</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">rhs</span>
