--- a/html/README_md.html
+++ b/html/README_md.html
@@ -115,6 +115,11 @@ run:</p>
 
 <pre>$ rake info</pre>
 
+<p>To show information about each module&#39;s tests, and branches commits,
+run:</p>
+
+<pre>$ rake info</pre>
+
 <h3 id="label-relevant+links-3A">relevant links:<span><a href="#label-relevant+links-3A">&para;</a> <a href="#top">&uarr;</a></span></h3>
 <ul><li>
 <p><a
