--- a/html/index.html
+++ b/html/index.html
@@ -87,6 +87,8 @@
   
     <li><a href="./Object.html">Object</a>
   
+    <li><a href="./String.html">String</a>
+  
   </ul>
 </div>
 
@@ -126,6 +128,11 @@ $ rake setup</pre>
 test suite:</p>
 
 <pre>$ rake test[pushpull]</pre>
+
+<p>To show information about each module&#39;s tests, and branches commits,
+run:</p>
+
+<pre>$ rake info</pre>
 
 <p>To show information about each module&#39;s tests, and branches commits,
 run:</p>
